--- a/working_files/2_notes.ipynb
+++ b/working_files/2_notes.ipynb
@@ -201,6 +201,153 @@
     "    rank = i + 1\n",
     "    print('The #%d most abundant gas in the atmosphere is %s.' %(rank,gas))\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### zip()\n",
+    "iterate through multiple lists without indexing\n",
+    "- nearly always used when each element of one list corresponds to an element in the same index position in another list. Therefore, it should mostly be used with two or more lists of the same length. If the lists do not have the same length, however, the number of iterations of the `for` loop will match the length of the shortest list."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the atomic mass of N2 is approximately 28 \n",
+      "the atomic mass of O2 is approximately 32 \n",
+      "the atomic mass of Ar is approximately 39 \n",
+      "the atomic mass of H2O is approximately 18 \n",
+      "the atomic mass of CO2 is approximately 44 \n"
+     ]
+    }
+   ],
+   "source": [
+    "gases = ['N2', 'O2', 'Ar', 'H2O', 'CO2']\n",
+    "masses = [28, 32, 39, 18, 44]\n",
+    "\n",
+    "for gas,mass in zip(gases, masses):\n",
+    "    print(f\"the atomic mass of {gas} is approximately {mass} \")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The `enumerate()` and `zip()` functions can also be used together, if necessary, to keep track of the index position of iterators."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 1.73e+44 molecules of N2 in the atmosphere.\n",
+      "There are 4.06e+43 molecules of O2 in the atmosphere.\n",
+      "There are 7.25e+41 molecules of Ar in the atmosphere.\n",
+      "There are 4.30e+41 molecules of H2O in the atmosphere.\n",
+      "There are 2.21e+40 molecules of CO2 in the atmosphere.\n"
+     ]
+    }
+   ],
+   "source": [
+    "gas_frac = [0.78084, 0.209476, 0.00934, 0.0025, 0.000314]\n",
+    "gas_molar_mass = [14.0067, 15.999, 39.948, 18.01528, 44.01]\n",
+    "\n",
+    "mass_atmosphere = 5.148e21   # grams\n",
+    "n_a = 6.022e23    # Avogadro's number\n",
+    "\n",
+    "for i,(frac,mol_mass) in enumerate(zip(gas_frac,gas_molar_mass)):\n",
+    "    gas = gases[i]\n",
+    "    mass = frac * mass_atmosphere\n",
+    "    molecules = (mass / mol_mass ) * n_a\n",
+    "    print('There are ' + '{:.2e}'.format(molecules) + ' molecules of %s in the atmosphere.' % (gas))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Structured Data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Making a set\n",
+    "- set([1, 4, 2, 3])\n",
+    "OR \n",
+    "- {1, 4, 2, 3}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Dictionaries"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> **TLDR**: Dictionaries are a very common collection type that allows data to be organized using a `key:value` framework. Because of the similarity between `key:value` pairs and many data structures (e.g. \"lookup tables\"), you will see Dictionaries quite a bit when working in python\n",
+    "\n",
+    "\n",
+    "> The use of whitespace and indentation is important in python. In the example above, the dictionary entries are indented relative to the brackets <code>{</code> and <code>}</code>. In addition, there is no space between the <code>'key'</code>, the <code>:</code>, and the <code>'value'</code> for each entry. Finally, notice that there is a <code>,</code> following each dictionary entry. This pattern is the same as all of the other <i>collection</i> data types we've seen so far, including <b>list</b>, <b>set</b>, and <b>tuple</b>."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Dictionaries have no order, so you can't call the 1st element in a dictionary -- you can only call them by keys NOT POSITION\n",
+    "- defined_dictionary['key']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Python is object oriented"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_list = list([2, 3, 4, 6, 2])\n",
+    "min(my_list)\n",
+    "my_list.append(12)\n",
+    "# How do we know when to do function(object) or object.function()? "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A function belongs to an object!!!"
+   ]
   }
  ],
  "metadata": {
