arrays in numpy

--- a/working_files/2_notes.ipynb
+++ b/working_files/2_notes.ipynb
@@ -313,15 +313,59 @@
    "metadata": {},
    "source": [
     "Dictionaries have no order, so you can't call the 1st element in a dictionary -- you can only call them by keys NOT POSITION\n",
-    "- defined_dictionary['key']"
+    "- defined_dictionary['key']\n",
+    "- all keys are unique, cannot have multiple things with same key\n",
+    "- but a key can be anything"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{3: 'the number three', <built-in function len>: 'the function len'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# What can be used as a key?\n",
+    "\n",
+    "my_dict = dict({\n",
+    "    #What can we get away with?\n",
+    "    3:'the number three',\n",
+    "    len:'the function len'\n",
+    "})\n",
+    "\n",
+    "print(my_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'a': 3, 'b': {}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# What can be used as a value?\n",
+    "\n",
+    "my_dict = dict({\n",
+    "    'a':3,\n",
+    "    'b':dict(), # can have a dictionary in a dictionary\n",
+    "})\n",
+    "\n",
+    "print(my_dict)"
+   ]
   },
   {
    "cell_type": "markdown",
