--- a/lectures/01_the_zen_of_python.ipynb
+++ b/lectures/01_the_zen_of_python.ipynb
@@ -13,13 +13,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Zen of Python, by Tim Peters\n",
+      "\n",
+      "Beautiful is better than ugly.\n",
+      "Explicit is better than implicit.\n",
+      "Simple is better than complex.\n",
+      "Complex is better than complicated.\n",
+      "Flat is better than nested.\n",
+      "Sparse is better than dense.\n",
+      "Readability counts.\n",
+      "Special cases aren't special enough to break the rules.\n",
+      "Although practicality beats purity.\n",
+      "Errors should never pass silently.\n",
+      "Unless explicitly silenced.\n",
+      "In the face of ambiguity, refuse the temptation to guess.\n",
+      "There should be one-- and preferably only one --obvious way to do it.\n",
+      "Although that way may not be obvious at first unless you're Dutch.\n",
+      "Now is better than never.\n",
+      "Although never is often better than *right* now.\n",
+      "If the implementation is hard to explain, it's a bad idea.\n",
+      "If the implementation is easy to explain, it may be a good idea.\n",
+      "Namespaces are one honking great idea -- let's do more of those!\n"
+     ]
+    }
+   ],
    "source": [
     "# What is the Zen of Python??\n",
     "import this"
@@ -956,13 +984,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "can only concatenate str (not \"int\") to str",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/amandaherbst/Documents/github/eds217_2023/lectures/01_the_zen_of_python.ipynb Cell 64\u001b[0m line \u001b[0;36m2\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/amandaherbst/Documents/github/eds217_2023/lectures/01_the_zen_of_python.ipynb#Y120sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# TypeError Examples:\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/amandaherbst/Documents/github/eds217_2023/lectures/01_the_zen_of_python.ipynb#Y120sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39m'\u001b[39;49m\u001b[39ma\u001b[39;49m\u001b[39m'\u001b[39;49m \u001b[39m+\u001b[39;49m \u001b[39m3\u001b[39;49m\n",
+      "\u001b[0;31mTypeError\u001b[0m: can only concatenate str (not \"int\") to str"
+     ]
+    }
+   ],
    "source": [
     "# TypeError Examples:\n",
     "'a' + 3"
@@ -984,13 +1024,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m/Users/amandaherbst/Documents/github/eds217_2023/lectures/01_the_zen_of_python.ipynb Cell 66\u001b[0m line \u001b[0;36m3\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/amandaherbst/Documents/github/eds217_2023/lectures/01_the_zen_of_python.ipynb#Y122sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# IndexError Example:\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/amandaherbst/Documents/github/eds217_2023/lectures/01_the_zen_of_python.ipynb#Y122sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m my_list \u001b[39m=\u001b[39m [\u001b[39m'\u001b[39m\u001b[39ma\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mb\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mc\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39md\u001b[39m\u001b[39m'\u001b[39m]\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/amandaherbst/Documents/github/eds217_2023/lectures/01_the_zen_of_python.ipynb#Y122sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m my_list[\u001b[39m4\u001b[39;49m]\n",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
    "source": [
     "# IndexError Example:\n",
     "my_list = ['a', 'b', 'c', 'd']\n",
@@ -1012,13 +1064,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'column12'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32m/Users/amandaherbst/Documents/github/eds217_2023/lectures/01_the_zen_of_python.ipynb Cell 68\u001b[0m line \u001b[0;36m4\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/amandaherbst/Documents/github/eds217_2023/lectures/01_the_zen_of_python.ipynb#Y124sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# KeyError Examples:\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/amandaherbst/Documents/github/eds217_2023/lectures/01_the_zen_of_python.ipynb#Y124sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m my_dict \u001b[39m=\u001b[39m {\u001b[39m'\u001b[39m\u001b[39mcolumn_1\u001b[39m\u001b[39m'\u001b[39m: \u001b[39m'\u001b[39m\u001b[39mdefinition 1\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39manother_word\u001b[39m\u001b[39m'\u001b[39m: \u001b[39m'\u001b[39m\u001b[39ma second definition\u001b[39m\u001b[39m'\u001b[39m}\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/amandaherbst/Documents/github/eds217_2023/lectures/01_the_zen_of_python.ipynb#Y124sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m my_dict[\u001b[39m'\u001b[39;49m\u001b[39mcolumn12\u001b[39;49m\u001b[39m'\u001b[39;49m]\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'column12'"
+     ]
+    }
+   ],
    "source": [
     "# KeyError Examples:\n",
     "\n",
@@ -1085,7 +1149,7 @@
   "kernelspec": {
    "display_name": "eds217_2023",
    "language": "python",
-   "name": "eds217_2023"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
